# attrici

./: .gitattributes  .gitignore  .pytensorrc  BOOTSTRAPPING.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  OVERVIEW.md  README.md  USAGE.md  const.py  count_replaced_values.py  create_gmt_ssa_runscript.sh  create_runscripts.sh  create_submit.py  create_test_data.py  delete_traces_and_timeseries.sh  dtr_merge.py  dtr_smooth.py  env_list.txt  estimation_quality_check.py  fitting.py  gmt.py  iris_gmt.py  iris_regr.py  merge_cfact.py  merge_files.sh  merge_parallel.py  merge_parameter_files.sh  merge_submit.sh  mpi_slurm.sh  output  pyproject.toml  rechunk.sh  regression.py  regression_testnb.ipynb  run_bayes.py  run_bayes_array.py  run_bayes_det.py  run_bayes_reg.py  (+28 more)
.github/workflows/: ci.yml  docs.yml
attrici/: __init__.py  __main__.py  cli.py  const.py  datahandler.py  detrend.py  distributions.py  estimator.py  fourier.py  modelling.py  models.py  postprocess.py  preprocessing.py  ssa.py  util.py  variables.py
attrici/commands/: __init__.py  derive_huss.py  detrend.py  merge_output.py  merge_traces.py  postprocess_tas.py  preprocess_tas.py  ssa.py
attrici/estimation/: __init__.py  model.py  model_pymc3.py  model_pymc5.py  model_scipy.py
attrici/icounter/: const.py  distributions.py
config/: environment.yml  merge_submit.sh.jinja2  submit.sh.jinja2  submit_array.sh.jinja2  submit_cfact.sh.jinja2  theanorc
examples/: tas_example.ipynb
examples/data/: gswp3_ssa_gmt.nc4
functions/: dtr_gmt.py  dtr_merge.py  dtr_smooth.py  visualization.py
icounter/: _version.py  const.py  datahandler.py  distributions.py  estimator.py  fourier.py  gammabernoulli.py  logistic.py  models.py  postprocess.py
idetrend/: __init__.py  bayes_detrending.py  const.py  counterfactual.py  datahandler.py  detrending.py  estimator.py  fourier.py  lin_regr.py  linear_regression.py  models.py  regression.py  utility.py  visualization.py
notebooks/: bootstrap.ipynb  compare-windows-modes.ipynb  fix_write_netcdf.ipynb  optimization-with-scipy.ipynb  section-3-1.ipynb  solver-comparison.ipynb  visualization.ipynb
plotting/: check_prior_dist.py  helper_functions.py  plot_cdo_trend_maps.py  plot_giorgi_regions.py  plot_scaled_timeseries.py  plot_single_grid_cell.py  plot_timeave_maps.py  plot_timeseries.py
postprocessing/: change_local_vars.sh  create_tasmin_tasmax.py  derive_huss.sh  how_to_postprocess.md  make_symlinks.sh  merge_cfact.py  merge_parameter_files.py  rechunk.sh  set_global_metadata.sh  split_data.sh  split_decadal.sh  submit_create_tasmin_tasmax.sh  submit_merge_cfact.sh
preprocessing/: calc_gmt_by_ssa.py  complete_preproc.sbatch  complete_preproc.sh  convert_prsn.sh  convert_tas.sh  creat_gmt_ssa_wrapper.sh  create_ssa_smoothed_gmt.sh  create_tasrange_tasskew.py  create_test_data.py  merge_data.py  merge_data.sh  ncks_subset.sh  rechunk.sh  remove_leap_days.sh  roll_mean.py  submit_rechunk.sh  subset.py  subset.sh  subset_data.py
preprocessing/create_gmt_era5/: README.md  merge_gmt_daily_files.sh  notify_failure.sh  process_hourly_tas_files.sh  slurm_process_hourly_tas.sh  wrapper_script.sh
sanity_check/: estimation_quality_check.py  merge_files.py  sanity_check.py  visual_check.py
scripts/: binary_mask.py
tests/: produce_test_data.py  test_detrend.py  test_detrend_pymc.py  test_detrend_pymc5.py  test_detrend_scipy.py  test_distribution_parameter_models.py  test_idetrend.py  test_merge_output.py  test_precip_priors.py  test_preprocessing.py  test_ssa.py  test_variables.py  test_vendored_ssa.py  test_version.py
tests/data/: 20CRv3-ERA5_germany_mask.nc  20CRv3-ERA5_germany_ssa_gmt.nc  20CRv3-ERA5_germany_target_hurs_lat50.75_lon9.25.h5  20CRv3-ERA5_germany_target_pr_lat50.75_lon9.25.h5  20CRv3-ERA5_germany_target_ps_lat50.75_lon9.25.h5  20CRv3-ERA5_germany_target_rlds_lat50.75_lon9.25.h5  (+14 more)
